Fix paths for GitHub Pages compatibility

--- a/HTML/Interests.html
+++ b/HTML/Interests.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DDH Website</title>
-  <link rel="stylesheet" href="../CSS/styles.css">
+  <link rel="stylesheet" href="/CSS/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -14,11 +14,11 @@
     <nav id="navbar">
       <div class="logo">Darren Hall's Portfolio</div>
       <div class="nav-links">
-        <a href="../index.html">Home</a>
-        <a href="./Skills_comps.html">Skills & Competencies</a>
-        <a href="./Experience.html">Experience</a>
-        <a href="./Education.html">Education</a>
-        <a href="./Interests.html">Interests</a>
+        <a href="/index.html">Home</a>
+        <a href="/Skills_comps.html">Skills & Competencies</a>
+        <a href="/Experience.html">Experience</a>
+        <a href="/Education.html">Education</a>
+        <a href="/Interests.html">Interests</a>
       </div>
     </nav>
   </header>
@@ -38,7 +38,7 @@
           <li>We enjoy lots of family days out at places like parks, cinema, on dog walks etc.</li>
         </ul>
         <p>Take a peek at a family picture by clicking this <button>button</button></p>
-        <img id="familyPic" src="../images/DarrenFamPic.jpeg" alt="Darren family pic">
+        <img id="familyPic" src="/images/DarrenFamPic.jpeg" alt="Darren family pic">
 
       </div>
       <div>
@@ -78,7 +78,7 @@
       <p>Mobile: 07789 766489</p>
     </div>
 
-    <script src="../JS/script.js"></script>
+    <script src="/JS/script.js"></script>
 
   </footer>
 
