--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DDH Website</title>
-  <link rel="stylesheet" href="./CSS/styles.css">
+  <link rel="stylesheet" href="/CSS/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -15,10 +15,10 @@
       <div class="logo">Darren Hall's Portfolio</div>
       <div class="nav-links">
         <a href="#">Home</a>
-        <a href="./HTML/Skills_comps.html">Skills & Competencies</a>
-        <a href="./HTML/Experience.html">Experience</a>
-        <a href="./HTML/Education.html">Education</a>
-        <a href="./HTML/Interests.html">Interests</a>
+        <a href="/HTML/Skills_comps.html">Skills & Competencies</a>
+        <a href="/HTML/Experience.html">Experience</a>
+        <a href="/HTML/Education.html">Education</a>
+        <a href="/HTML/Interests.html">Interests</a>
       </div>
     </nav>
   </header>
@@ -47,7 +47,7 @@
 
       <div>
         <div>
-          <img src="./images/Daz.png" alt="D Hall portrait">
+          <img src="/images/Daz.png" alt="D Hall portrait">
         </div>
       </div>
 
@@ -61,7 +61,7 @@
           <li>Quality Assurance Processes</li>
           <li>Analytical and problem-solving skills</li>
           <br><br>
-          <p>click <a href="./HTML/Skills_comps.html"><button>here</button></a> for further detail</p>
+          <p>click <a href="/HTML/Skills_comps.html"><button>here</button></a> for further detail</p>
         </ul>
       </div>
 
@@ -74,7 +74,7 @@
           <li>Auto Trader</li>
           <li>Sage</li>
           <br><br><br>
-          <p>click <a href="./HTML/Experience.html"><button>here</button></a> more details on my work experience</p>
+          <p>click <a href="/HTML/Experience.html"><button>here</button></a> more details on my work experience</p>
         </ul>
       </div>
 
@@ -88,7 +88,7 @@
           <li>ILEX</li>
           <li>GCSEs and NVQs</li>
           <br><br>
-          <p>click <a href="./HTML/Education.html"><button>here</button></a> for more details</p>
+          <p>click <a href="/HTML/Education.html"><button>here</button></a> for more details</p>
         </ul>
       </div>
 
