--- a/HTML/Education.html
+++ b/HTML/Education.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DDH Website</title>
-  <link rel="stylesheet" href="./CSS/styles.css">
+  <link rel="stylesheet" href="../CSS/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -14,7 +14,7 @@
     <nav id="navbar">
       <div class="logo">Darren Hall's Portfolio</div>
       <div class="nav-links">
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./Skills_comps.html">Skills & Competencies</a>
         <a href="./Experience.html">Experience</a>
         <a href="./Education.html">Education</a>
