--- a/HTML/Interests.html
+++ b/HTML/Interests.html
@@ -38,7 +38,7 @@
           <li>We enjoy lots of family days out at places like parks, cinema, on dog walks etc.</li>
         </ul>
         <p>Take a peek at a family picture by clicking this <button>button</button></p>
-        <img id="familyPic" src="/images/DarrenFamPic.jpeg" alt="Darren family pic">
+        <img id="familyPic" src="../images/DarrenFamPic.jpeg" alt="Darren family pic">
 
       </div>
       <div>
@@ -78,7 +78,7 @@
       <p>Mobile: 07789 766489</p>
     </div>
 
-    <script src="./JS/script.js"></script>
+    <script src="../JS/script.js"></script>
 
   </footer>
 
